# RLDroneSim

./: .gitignore  Dockerfile  GCS_MAVLink_Copter.cpp  README.md  docker-compose-wslg.yml  docker-compose.yml  mode_guided.cpp  simple_world.sdf
clock_node/: CMakeLists.txt  sim_time_server.cpp
copied/: ardupilot_sitl.py  f450_world.sdf  sim_vehicle.py  simple_world.sdf  simple_world_2.sdf  tmp_build.sh
copied/f450/: model.sdf
copied/f450_ardupilot/: model.config  model.sdf
copied/lua_scripts/: reset_sitl.lua
examples/: baseline_eval.py  basic_training.py  deploy.py  deploy_ddpg.py  deploy_hardware.py  deploy_sim.py  deploy_simple_hardware.py  eval_baseline.py  eval_ddpg.py  eval_model.py  eval_td3.py  evaluation_demo.py  model_eval.py  test_simple_training.py  train_ddpg.py  train_ddpg_vec.py  train_ddpg_vecNorm.py  train_td3.py  train_td3_vec.py  train_vectorized.py  trash.py
lua_scripts/: reset_sitl.lua
rl_training/: __init__.py  requirements.txt
rl_training/agents/: __init__.py  base_agent.py  td3_agent.py
rl_training/configs/: default_config.yaml  ideal_sensors.param
rl_training/environments/: __init__.py  ardupilot_env.py  base_env.py  (+4 more)
scripts/: reset_sitl.lua
tests/: change_mode.py  change_pid.py  demo_improved_reset.py  gazebo_test.py  gazebo_test2.py  get_pose_dat.py  pid_coef.py  takeoff_land.py  takeoff_land_improved.py  test_ardupilot_sitl_API.py  test_connect.py  test_ddpg.py  test_env.py  test_full_sitl_workflow copy.py  test_full_sitl_workflow.py  test_gazebo_API.py  test_mission.py  test_simple_training.py  test_simulation.py
(+26 files in other folders)
