cmake_minimum_required(VERSION 3.10)
project(sim_time_server CXX)

# Try common versions (edit list if needed)
foreach(v 13 12 11 10 9)
  if(NOT TARGET gz-transport${v}::core)
    find_package(gz-transport${v} QUIET)
  endif()
  if(NOT TARGET gz-msgs${v}::gz-msgs${v})
    find_package(gz-msgs${v} QUIET)
  endif()
endforeach()

# Pick found versions
if(TARGET gz-transport13::core)
  set(GZ_TRANSPORT_TARGET gz-transport13::core)
elseif(TARGET gz-transport12::core)
  set(GZ_TRANSPORT_TARGET gz-transport12::core)
else()
  message(FATAL_ERROR "gz-transport not found")
endif()

if(TARGET gz-msgs11::gz-msgs11)
  set(GZ_MSGS_TARGET gz-msgs11::gz-msgs11)
elseif(TARGET gz-msgs10::gz-msgs10)
  set(GZ_MSGS_TARGET gz-msgs10::gz-msgs10)
elseif(TARGET gz-msgs9::gz-msgs9)
  set(GZ_MSGS_TARGET gz-msgs9::gz-msgs9)
else()
  message(FATAL_ERROR "gz-msgs not found")
endif()

add_executable(sim_time_server sim_time_server.cpp)
target_link_libraries(sim_time_server ${GZ_TRANSPORT_TARGET} ${GZ_MSGS_TARGET})
set_property(TARGET sim_time_server PROPERTY CXX_STANDARD 17)
